@@ -159,7 +159,7 @@ Classes and functions
 ---------------------
 
 """
-from __future__ import with_statement
+from __future__ import absolute_import, division, with_statement
 
 import numpy
 import re
