@@ -128,7 +128,7 @@ Classes
 
 """
 
-from __future__ import with_statement
+from __future__ import absolute_import, division, with_statement
 
 import warnings
 import struct
